--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,6 +28,10 @@ end
 target 'PokeDex' do
   config = use_native_modules!
 
+  pod 'Firebase', :modular_headers => true
+  pod 'FirebaseCoreInternal', :modular_headers => true
+  pod 'GoogleUtilities', :modular_headers => true
+  pod 'FirebaseCore', :modular_headers => true
   # Flags change depending on the env values.
   flags = get_default_flags()
 
