--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.5",
+    "@react-native-firebase/app": "^18.7.2",
+    "@react-native-firebase/messaging": "^18.7.2",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/react-native": "^12.4.1",
     "eslint-config-standard": "^17.1.0",
