--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
     "@react-native-async-storage/async-storage": "^1.19.5",
     "@react-native-firebase/app": "^18.7.2",
     "@react-native-firebase/messaging": "^18.7.2",
+    "@react-native-masked-view/masked-view": "^0.3.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/react-native": "^12.4.1",
     "eslint-config-standard": "^17.1.0",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-safe-area-context": "^4.8.0",
+    "react-native-screens": "^3.29.0",
     "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0"
   },
