--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator='iPhone 15 Pro Max'",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^18.7.2",
     "@react-native-firebase/messaging": "^18.7.2",
     "@react-native-masked-view/masked-view": "^0.3.0",
+    "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
@@ -25,6 +26,7 @@
     "react-native-gesture-handler": "^2.14.0",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0"
   },
@@ -38,6 +40,7 @@
     "@types/jest": "^29.5.11",
     "@types/mocha": "^10.0.6",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux-mock-store": "^1.0.6",
     "@types/redux-persist": "^4.3.1",
